<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InputActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_input_indication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cut_indication"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

    <LinearLayout
        android:id="@+id/layout_input_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_indication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_length"
            android:inputType="numberDecimal"
            android:background="@drawable/bg_cut_button"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/et_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_width"
            android:inputType="numberDecimal"
            android:background="@drawable/bg_cut_button"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
